[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "napari-save-transformed"
dynamic = ["version"]
description = 'Napari plugin to save layers with their transforms applied.'
readme = "README.md"
requires-python = ">=3.9"
license = "BSD-3-Clause"
keywords = []
authors = [
  { name = "Jan Eglinger", email = "jan.eglinger@fmi.ch" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
  "Framework :: napari",
]
dependencies = [
  "napari>=0.6.6,<0.7",
]

[project.urls]
Documentation = "https://github.com/fmi-faim/napari-save-transformed#readme"
Issues = "https://github.com/fmi-faim/napari-save-transformed/issues"
Source = "https://github.com/fmi-faim/napari-save-transformed"

[project.entry-points."napari.manifest"]
napari-save-transformed = "napari_save_transformed:napari.yaml"

[tool.hatch.version]
source = "vcs"

[tool.coverage.run]
source_pkgs = ["napari_save_transformed", "tests"]
branch = true
parallel = true
omit = []

[tool.coverage.paths]
napari_save_transformed = ["src/napari_save_transformed", "*/napari-save-transformed/src/napari_save_transformed"]
tests = ["tests", "*/napari-save-transformed/tests"]

[tool.coverage.report]
show_missing = true
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["win-64", "osx-arm64"]

[tool.pixi.pypi-dependencies]
napari-save-transformed = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
napari = ">=0.6.6,<0.7"
pyqt = ">=5.15.9,<6"

[tool.pixi.feature.jupyter.dependencies]
jupyter = ">=1.1.1,<2"

[dependency-groups]
test = ["pytest", "pytest-cov"]
lint = ["ruff", "mypy"]

[tool.pixi.feature.lint.tasks]
check = "mypy --install-types --non-interactive src tests"

[tool.pixi.feature.test.tasks]
test = "pytest --cov=src --cov-report term-missing"
cov-xml = "pytest --cov=src --cov-report xml"

[tool.pixi.environments]
default = { solve-group = "py311" }
py310 = { features = ["py310", "test"], solve-group = "py310" }
py311 = { features = ["py311", "test"], solve-group = "py311" }
py312 = { features = ["py312", "test"], solve-group = "py312" }
py313 = { features = ["py313", "test"], solve-group = "py313" }
# py314 = { features = ["py314", "test"], solve-group = "py314" }
lint = { features = ["lint"], solve-group = "py311" }
jupyter = { features = ["jupyter"], solve-group = "py313" }
build = { features = ["build"], no-default-feature = true }

[tool.pixi.feature.build.dependencies]
hatch = ">=1.16.3,<2"

[tool.pixi.feature.build.tasks]
build = "hatch build"

[tool.pixi.feature.py310.dependencies]
python = "3.10.*"

[tool.pixi.feature.py311.dependencies]
python = "3.11.*"

[tool.pixi.feature.py312.dependencies]
python = "3.12.*"

[tool.pixi.feature.py313.dependencies]
python = "3.13.*"

# [tool.pixi.feature.py314.dependencies]
# python = "3.14.*"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint.extend-per-file-ignores]
"**/tests/*" = ["INP001"]
